p2/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapps-ingress
spec:
  # defaultBackend:
  #     service:
  #       name: app3-service
  #       port:
  #         number: 80
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
  - http:  # Catch-all rule (no host specified)
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
---
